# SST-forecast-ML

./: .gitignore  README.md  pyproject.toml
deployment/: TODO_README.txt  docker-compose - Copy.yml  docker-compose.yml
deployment/airflow_service/: DockerFile  airflow.cfg  entrypoint.sh
deployment/airflow_service/dags/: data_pipelines.py
deployment/bitnami_spark_cluster_image/: Dockerfile  preprocess.py  run_inference.py
deployment/cassandra_service/: DockerFile
deployment/cassandra_service/init_db/: cassandra.yaml  cassandra_healthcheck.sh  init-cassandra.cql  init-cassandra.sh
deployment/data_ingestion_service/: .cdsapirc  data_ingestion.py
deployment/postgres_service/: Dockerfile  create_db.sql  init-postgres.sh  postgres_export.sql
deployment/spark_data_ingestion_service/: Dockerfile  entrypoint.sh
deployment/spark_inference_service/: DockerFile  entrypoint.sh  run_inference.py
deployment/spark_pre_processing_service/: entrypoint.sh
development/EDA/: cassandrainsertscriptmay6.ipynb  first_run.ipynb  pre-processing-spark.ipynb
development/model_building/: RF_lag_basic_model_Final (1).ipynb  SST_Prediction_Test_RF_model.ipynb
development/spark_codebase/: BDprojectfile1.py  csd_data_pull.py
